Directorio web personalizado con poups

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ _plantillaweb/css/resets/resets.css
 _plantillaweb/index.html
 _plantillaweb/css/estilos.css
 _plantillaweb/css/resets/normalize.css
+Apuntes.txt
+webs.txt
