Cambios en Ecritorio

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,30 @@ _plantillaweb/css/estilos.css
 _plantillaweb/css/resets/normalize.css
 Apuntes.txt
 webs.txt
+instrucciones.txt
+practicaImagenes/index.html
+practicaBanner/index.html
+practicaBanner/montana.html
+practicaBanner/p3.JPG
+practicaBanner/css/estilos.css
+practicaBanner/css/resets/normalize.css
+practicaBanner/css/resets/resets.css
+practicaBanner/img/desktop/Chrysanthemum.jpg
+practicaBanner/img/desktop/arbol_mountain.jpg
+practicaBanner/img/desktop/banner_mountains.jpg
+practicaBanner/img/desktop/mountain_fondo.jpg
+practicaBanner/img/desktop/ph1.jpg
+practicaBanner/img/desktop/ph2.jpg
+practicaBanner/img/desktop/ph3.jpg
+practicaBlockinline/index.html
+practicaBlockinline/p1.JPG
+practicaBlockinline/css/estilos.css
+practicaBlockinline/css/resets/normalize.css
+practicaBlockinline/css/resets/resets.css
+practicaImagenes/p2.JPG
+practicaImagenes/css/estilos.css
+practicaImagenes/css/resets/normalize.css
+practicaImagenes/css/resets/resets.css
+practicaImagenes/img/desktop/banner-jelly.PNG
+practicaImagenes/img/desktop/banner-mar.jpg
+practicaImagenes/img/desktop/banner-whiteJelly.jpg
